--- a/main.html
+++ b/main.html
@@ -7,7 +7,22 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+    <table border="1">
+		<thead>
+			<th>Roll Number</th>
+			<th>Name</th>
+		</thead>
+		<tbody>
+			<tr>
+				<td>2102401550011</td>
+				<td>Firoj Ansari</td>
+			</tr>
+			<tr>
+				<td>2102401550017</td>
+				<td>Monty Chandela</td>
+			</tr>
+		</tbody>
+	</table>
     <script type="text/javascript" src="./script.js">
 </script>
 
